--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+    position: relative;
+}
 .navigation {
     text-align: center;
     background-color:rgb(200, 200, 200);
@@ -17,6 +20,7 @@
     margin: auto;
     padding-top: 0.75em;
     padding-bottom: 0.75em;
+    position: relative;
 }
 
 .navig a {
@@ -56,12 +60,14 @@ a:hover {
     border-radius: 50%;
 }
 
-.content {
-    background-image: url('photos/programming.jpg');
-    background-size: 98em;
-    background-repeat: no-repeat;
-    padding-top: 500px;
-    padding-bottom: 490px;
+.background_photo_main {
+    display: block;
+    width: 100%;
+    padding-top: -20px;
+    vertical-align: top;
+    background: transparent no-repeat;
+    background-position: top;
+    background-size: cover;
 }
 
 .signature {
@@ -91,5 +97,12 @@ a:hover {
     display: inline-block;
     padding-left: 0.75em;
     padding-right: 0.75em;
+}
 
+.main1 {
+    background-color: rgba(248, 247, 216, 0.7);
+    top: 10em;
+    left: 54em;
+    width: 45em;
+    height: 10em;
 }
