--- a/timeline.css
+++ b/timeline.css
@@ -1,3 +1,27 @@
+.title-resume {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 10px;
+}
+.title-resume .resume {
+  position: relative;
+  margin-left: 100px;
+  padding: 5px 0;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
+  padding-left: 10em;
+  padding-right: 10em;
+  background-color: #f2f3f7;
+  opacity: 0.9;
+  font-family: "Quicksand", Arial, sans-serif;
+  font-size: xx-large;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+  border-color: black;
+  border-style: solid;
+}
+
 .timeline {
   max-width: 900px;
   margin: 0 auto;
@@ -6,6 +30,7 @@
 .timeline .timeline-body {
   position: relative;
   background-color: #f2f3f7;
+  opacity: 0.9;
   margin-left: 100px;
   border-radius: 0 8px 8px 0;
   padding: 5px 0;
