--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ body {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover;
+    background-size: 100% 100%;
 
     min-height: 100vh;
     display: flex;
