--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,113 @@
+html {
+    font-size: 16px;
+}
 body {
+    position: relative;
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Roboto', sans-serif;
+    min-width: 320px;
+    color: black;
+    background-color: white;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+section {
+    padding: 50px 0;
+}
+
+a {
+    color: black;
+}
+
+/*Цвет ссылки при наведении*/
+a:hoover {
+    color: #1d263f;
+}
+
+/*Цвет ссылки, по которой уже проходили*/
+a:visited {
+    color: #1f013b;
+}
+
+.navbar-light .navbar-nav .nav-link{
+    color: #111;
+    font-weight: 550;
+    text-transform: uppercase;
+
+}
+
+.main-menu li a::after {
+    content: "";
+    display: block;
+    width: 100%;
+    background-color: #111;
+    height: 1px;
+    transition: all .3s;
+    transform: scale(0);
+}
+
+.main-menu li a:hover::after {
+    transform: scale(1);
+}
+
+.footer {
+    background-color: #343434;
+}
+
+.footer h4 {
+    color: #ccc;
+    text-transform: uppercase;
+    font-size: 16px;
+    border-bottom: 1px solid #666;
+    padding-bottom: 3px;
+}
+
+.footer a {
+    text-decoration: none;
+    transition: all .3s;
+}
+
+.footer a:hover {
+    color: white;
+    text-decoration: underline;
+}
+
+.footer a, .footer li {
+    color: #c8c8c8;
+}
+
+.footer li a {
+    display: block;
+}
+
+.footer-icons a {
+    display: inline-block;
+    font-size: 20px;
+    margin-right: 15px;
+
+}
+
+.photo_me {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    object-position: 0% 100%;
+    border-radius: 30%;
+}
+
+
+.jumbotron {
+    background-image: url("photos/desk.jpg");
+    background-size: cover;
+}
+
+
+/*body {
     position: relative;
 }
 .navigation {
@@ -88,7 +197,6 @@ a:hover {
     border-bottom-style: solid;
     border-bottom-color: #3c4143;
 }
-
 .contacts {
     margin: auto;
 }
@@ -140,3 +248,4 @@ body {
 footer {
     margin-top: auto;
 }
+*/
