--- a/styles.css
+++ b/styles.css
@@ -123,3 +123,24 @@ ul.contacts li {
     background: #f4f4f4;
 }
 
+.white-section {
+    background-color: white;
+}
+
+.accordion-button {
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    color: #676a6c;
+    text-align: center;
+    font-weight: 500;
+    text-transform: uppercase;
+
+}
+.accordion-button.collapsed {
+    background: #f4f4f4;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
